--- a/src/app/admin/admin-board/sidenav/sidenav.component.html
+++ b/src/app/admin/admin-board/sidenav/sidenav.component.html
@@ -1,5 +1,9 @@
-<ul>
-  <li><a routerLink="/admin-board/employee-page">Employee</a></li>
-  <li><a routerLink="/admin-board/technician-page">Technician</a></li>
-  <li><a routerLink="/admin-board/list-technician">Tickets</a></li>
-</ul>
+<!-- admin-sidenav.component.html -->
+<nav class="admin-sidenav">
+  <ul class="side-menu">
+    <li><a routerLink="/admin-board/employee-page" routerLinkActive="active">Employee</a></li>
+    <li><a routerLink="/admin-board/technician-page" routerLinkActive="active">Technician</a></li>
+    <li><a routerLink="/admin-board/list-technician" routerLinkActive="active">Tickets</a></li>
+    <li><a routerLink="/admin-board/equipment-page" routerLinkActive="active">Equipment</a></li>
+  </ul>
+</nav>
